--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flexbox-Bootstrap</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
+
+  <h1>Rochelle Mikel Rossman</h1>
   
-<script src="main.js"></script>
+  <div class="image-container">
+    <div class="image">
+    <img src="images/7C964C15-CC1A-44B8-9A93-BDF1DC5762E7_1_105_c.jpeg" alt="Rochelle and Cat staring at each other lovingly on a sunny day in front of a brick building surrounded by blue skies">
+    </div>
+</div>
+  
+  <div class="d-grid gap-2">
+    <button class="btn btn-primary" type="button">Button</button>
+    <button class="btn btn-primary" type="button">Button</button>
+    <button class="btn btn-primary" type="button">Button</button>
+    <button class="btn btn-primary" type="button">Button</button>
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  
+  <script src="main.js"></script>
+
 
 </body>
 </html>
